# asteroids-on-steroids

./: CLAUDE.md
GameEngine/: AsteroidsEngine.csproj  Program.cs
GameEngine/Assets/: game_config.json
GameEngine/Assets/shapes/: bruiser.json  drone.json  mothership.json  piercing_round.json  player_ship.json
GameEngine/Demos/: CircleDemo.cs  TwoPlayerDemo.cs  compile-two-player.sh
GameEngine/Demos/AsteroidDemo/: AsteroidDemo.csproj  GameConfig.cs  Program.cs  SdlGameWindow.cs  SkiaRenderer.cs  Tuner.cs  config.json
GameEngine/Demos/TwoPlayerGame/: Program.cs  SdlGameWindow.cs  TwoPlayerGame.csproj
GameEngine/Engine/Collision/: CircleShape.cs  CollisionShape.cs  CompoundShape.cs  PolygonShape.cs  PolygonUtils.cs
GameEngine/Engine/Components/: FractureProperties.cs  FractureState.cs  RigidBody.cs  Sprite.cs  Transform.cs
GameEngine/Engine/Core/: ISystem.cs
GameEngine/Engine/Destruction/: Cell.cs  FractureContract.cs  FractureCrackSystem.cs  FractureProcess.cs  FractureService.cs  FractureSimulator.cs  VoronoiTessellator.cs
GameEngine/Engine/Effects/: ParticleSystem.cs
GameEngine/Engine/Input/: InputSystem.cs
GameEngine/Engine/Rendering/: Camera.cs  Color.cs  IGameWindow.cs  IRenderer.cs
GameEngine/Engine/Resources/: ResourceManager.cs
GameEngine/Engine/State/: IGameState.cs  StateStack.cs
GameEngine/Engine/Systems/: CollisionSystem.cs  PhysicsQueries.cs  PhysicsSystem.cs  RenderSystem.cs
GameEngine/Game/: AsteroidsGame.csproj  Program.cs
GameEngine/Game.WinForms/: AsteroidsGame.WinForms.csproj  Program.cs  README.md
GameEngine/Game/Components/: GameComponents.cs  Tags.cs
GameEngine/GameCore/: AsteroidsGameCore.csproj  GameHost.cs
GameEngine/Gameplay/: FractureGameplay.cs  ParticleEffects.cs  WorldRenderer.cs
info/: game_design.md  meta_notes.md
prompts/: prompt3.txt
rust/: Cargo.toml  MIGRATION.md
rust/crates/collision/: Cargo.toml
rust/crates/collision/src/: contact.rs  geom.rs  lib.rs  shape.rs  spatial_grid.rs
rust/crates/collision/tests/: shapes.rs
rust/crates/fracture/: Cargo.toml
rust/crates/fracture/src/: contract.rs  geom.rs  kernel.rs  lib.rs  process.rs  properties.rs  rng.rs  service.rs  simulator.rs  tuning.rs  types.rs  voronoi.rs
rust/crates/fracture/tests/: connectivity.rs  golden.rs  voronoi.rs
rust/crates/game-core/: Cargo.toml
rust/crates/game-core/src/: lib.rs  loader.rs
rust/crates/game-core/src/config/: asteroid.rs  entity.rs  fracture_global.rs  game_config.rs  material.rs  mod.rs  physics.rs  player.rs  shape_data.rs  skill.rs  vfx.rs  wave.rs  wave_system.rs  weapon.rs
rust/crates/game-core/tests/: load_real_assets.rs
rust/game/: Cargo.toml
rust/game/src/: collision.rs  components.rs  config.rs  main.rs  player.rs  prefabs.rs  rendering.rs  systems.rs
(+13 files in other folders)
